--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-scroll</title>
   </head>
+  <style>
+    *, html,body {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }  
+    html, body {
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
